After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796883 - tagdemux: Properly propagate gst_pad_pull_range() errors
tagdemux: Properly propagate gst_pad_pull_range() errors
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.14.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-07-27 12:16 UTC by Sebastian Dröge (slomo)
Modified: 2018-08-02 07:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tagdemux: Properly propagate gst_pad_pull_range() errors (7.05 KB, patch)
2018-07-27 12:16 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2018-07-27 12:16:47 UTC
See commit message
Comment 1 Sebastian Dröge (slomo) 2018-07-27 12:16:54 UTC
Created attachment 373186 [details] [review]
tagdemux: Properly propagate gst_pad_pull_range() errors

And don't consider FLUSHING an actual error, just stop in that case.
Comment 2 Nicolas Dufresne (ndufresne) 2018-07-27 12:39:57 UTC
Review of attachment 373186 [details] [review]:

Looks good.

::: gst-libs/gst/tag/gsttagdemux.c
@@ +1221,3 @@
   if (!have_tag) {
     GST_DEBUG_OBJECT (demux, "Could not find start tag");
+    flow_ret = GST_FLOW_OK;

Up to you, flow_ret could be initialize to OK by default.
Comment 3 Sebastian Dröge (slomo) 2018-07-27 13:23:59 UTC
Attachment 373186 [details] pushed as 2f497ed - tagdemux: Properly propagate gst_pad_pull_range() errors